# learn-nlp

./: .gitignore  1-text-preprocessing.ipynb  2-feature-extraction.ipynb  3-wordtovec-embedding.ipynb  4-game-of-thrones-word2vec.ipynb  5-text-classification.ipynb  6-part-of-speech-tagging.ipynb  pyproject.toml
7-duplicate-question-identify/: 1-initial-eda.ipynb
