[project]
name = "learn-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "emoji>=2.15.0",
    "en-core-web-sm",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "spacy==3.7.2",
    "textblob>=0.19.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
en-core-web-sm = { path = "input/en_core_web_sm-3.7.1-py3-none-any.whl" }
